--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.2",
+    "@types/sqlite3": "^3.1.8",
+    "@types/util.promisify": "^1.0.4",
     "express": "^4.18.1",
     "foreman": "^3.0.1",
     "nodemon": "^2.0.20",
+    "sqlite3": "^5.1.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
